tests/cases/should_fail/incomplete_range_pat/case.hash
main := () => {
    match k {
        1.. => {};
    }
};
