tests/cases/should_fail/incomplete_range_pat/case.stderr
error: expected an arrow `=>` 
 --> $DIR/case.hash:3:10
2 |       match k {
3 |           1.. => {};
  |            ^ here
4 |       }
